--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vimeo-downloader",
-  "version": "0.0.1",
+  "name": "@leorossi/vimeo-downloader",
+  "version": "0.0.3",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/lib/index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest"
