--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^25.2.3",
     "@types/node": "^13.11.0",
-    "jest": "^25.2.7"
+    "jest": "^25.2.7",
+    "typescript": "^3.9.7"
   }
 }
